bug(EJ2-2319): IE 11 Toolbar items overlapping grid border issue fix.

--- a/styles/toolbar/_layout.scss
+++ b/styles/toolbar/_layout.scss
@@ -157,7 +157,8 @@
     touch-action: none;
     user-select: none;
     white-space: nowrap;
-    @if $skin-name == 'fabric' {
+
+    &.e-control[class*='e-toolbar'] {
       box-sizing: content-box;
     }
 
